# triss

./: .dir-locals.el  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README.txt  main.py  pylintrc.toml  pyproject.toml  requirements.txt  test_main.py  test_stress.py
requirements/: test.txt
src/triss/: byte_seqs.py  byte_streams.py  cli.py  codec.py  core.py  crypto.py  header.py  util.py
src/triss/codec/: __init__.py  data_file.py  memory.py  qrcode.py
src/triss/codecs/: data_file.py  qrcode.py
tests/: helpers.py  test_main.py
tests/generative/: gen_common.py  test_codec.py  test_common.py  test_mac.py  test_qrcode.py
tests/main/: test_byte_seqs.py  test_byte_streams.py  test_codec.py  test_core.py  test_crypto.py  test_mac.py
tests/stress/: test_qr_codec.py
triss/: cli.py  crypto.py
triss/codecs/: memory.py
trivial_secret_sharing/: __main__.py  cli.py  core.py
